=== 2.4.1 / 2012-02-01

* Bug fix
  * When FakeWeb or WebMock are loaded SSL sessions will not be reused to
    prevent breakage of testing frameworks.  Issue #13 by Matt Brictson, pull
    request #14 by Zachary Scott

=== 2.4 / 2012-01-31

* Minor Enhancement
  * net-http-persistent now complains if OpenSSL::SSL::VERIFY_PEER is equal to
    OpenSSL::SSL::VERIFY_NONE.  If you have a platform that is broken this way
    you must define the constant:

      I_KNOW_THAT_OPENSSL_VERIFY_PEER_EQUALS_VERIFY_NONE_IS_WRONG = nil

    at the top level of your application to disable the warning.

* Bug fix
  * Fix persisting SSL sessions through HTTP proxies.  Mechanize issue #178 by
    Robert Poor, net-http-persistent issues #10, #11.

=== 2.3.2 / 2011-12-21

* Bug fix
  * Finish connections that were closed by Net::HTTP so they can be restarted.

=== 2.3.1 / 2011-10-26

* Bug fix
  * If a request object already contains a Connection header it will no longer
    be overridden.  This allows keep-alive connections to be disabled on a
    per-request basis.

=== 2.3 / 2011-10-25

* Minor Enhancement
  * The time since last use for a connection is now recorded in error
    messages for the connection.

=== 2.2 / 2011-10-24

* Minor Enhancements
  * Added timeouts for idle connections which are set through #idle_timeout.
    The default timeout is 5 seconds.  Reducing the idle timeout is preferred
    over setting #retry_change_requests to true if you wish to avoid the "too
    many connection resets" error when POSTing data.
  * Documented tunables and settings in one place in Net::HTTP::Persistent

=== 2.1 / 2011-09-19

* Minor Enhancement
  * For HTTPS connections, SSL sessions are now reused avoiding the extra
    round trips and computations of extra SSL handshakes.  If you have
    problems with SSL session reuse it can be disabled by
    Net::HTTP::Persistent#reuse_ssl_sessions

* Bug Fixes
  * The default certificate store is now used even if #verify_mode was not